<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_COM" Id="{36fe231a-c1bf-466c-863d-36a4bf52d5fa}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    // Define COM Ports/Buffers incl. library Tc2_SerialCom

    //LXLHN_PTM_01
    PTM_SerialRXBuffer : ComBuffer;
    PTM_SerialTXBuffer : ComBuffer;

    // Serial Terminal
    PTM_fbSerialLineControl: SerialLineControl;

    //SERIAL IO //EL6021_00_05
    {attribute	'TcLinkTo'	:=	'.Status:=TIIB[EL6021_00_05)]^COM TxPDO-Map Inputs^Status;
                                 .D[0]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 0;
                                 .D[1]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 1;
                                 .D[2]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 2;
                                 .D[3]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 3;
                                 .D[4]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 4;
                                 .D[5]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 5;
                                 .D[6]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 6;
                                 .D[7]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 7;
                                 .D[8]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 8;
                                 .D[9]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 9;
                                 .D[10]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 10;
                                 .D[11]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 11;
                                 .D[12]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 12;
                                 .D[13]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 13;
                                 .D[14]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 14;
                                 .D[15]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 15;
                                 .D[16]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 16;
                                 .D[17]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 17;
                                 .D[18]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 18;
                                 .D[19]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 19;
                                 .D[20]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 20;
                                 .D[21]:=TIIB[EL6021_00_05]^COM TxPDO-Map Inputs^Data In 21;
    '}
    PTM_stComIn		AT %I*	:	EL6inData22B;
    {attribute	'TcLinkTo'	:=	'.Ctrl:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Ctrl;
                                 .D[0]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 0;
                                 .D[1]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 1;
                                 .D[2]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 2;
                                 .D[3]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 3;
                                 .D[4]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 4;
                                 .D[5]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 5;
                                 .D[6]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 6;
                                 .D[7]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 7;
                                 .D[8]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 8;
                                 .D[9]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 9;
                                 .D[10]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 10;
                                 .D[11]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 11;
                                 .D[12]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 12;
                                 .D[13]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 13;
                                 .D[14]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 14;
                                 .D[15]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 15;
                                 .D[16]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 16;
                                 .D[17]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 17;
                                 .D[18]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 18;
                                 .D[19]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 19;
                                 .D[20]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 20;
                                 .D[21]:=TIIB[EL6021_00_05]^COM RxPDO-Map Outputs^Data Out 21;
    '}
    PTM_stComOut		AT %Q*	:	EL6outData22B;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>